--- a/my_notebook.ipynb
+++ b/my_notebook.ipynb
@@ -54,9 +54,10 @@
     "from matplotlib.patches import Patch\n",
     "%matplotlib inline\n",
     "from prettytable import PrettyTable\n",
+    "import Pretty_Table as pt\n",
     "from ipypublish import nb_setup\n",
     "from IPython.display import set_matplotlib_formats, Image\n",
-    "import Pretty_Table as pt\n",
+    "\n",
     "#define the chart overall settings\n",
     "set_matplotlib_formats('pdf', 'png')\n",
     "#set_matplotlib_formats('pdf')\n",
@@ -171,9 +172,7 @@
      "end_time": "2020-02-20T14:33:10.608649Z",
      "start_time": "2020-02-20T14:33:10.601627Z"
     },
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
